--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,180 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #FFFFFF;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+/* ---------------------------------- */
+:root {
+  --navbar: #185999;
+  --pink: #e11761;
+  --bg: #080115;
+  --gray: #716d79;
+}
+
+header {
+  background: var(--navbar);
+  padding: 1.3rem 0;
+}
+header nav ul li a {
+  color: white !important;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+header .collapse {
+  width: 100%;
+  margin: 0 1.2rem;
+}
+header nav .navbar-nav {
+  display: flex;
+  /* background: yellow; */
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+header nav .navbar-nav li img {
+  width: 1.4rem;
+}
+/* --------------------------------------------------------------- */
+.home {
+  background: var(--bg);
+  /* background: rgb(33, 164, 187); */
+  height: 90vh;
+  padding: 2rem;
+}
+.home .para_first {
+  color: var(--navbar);
+  text-transform: uppercase;
+  letter-spacing: 0.3rem;
+}
+.home h1 {
+  color: white;
+  font-weight: 900;
+  font-size: 5rem;
+}
+.home h1 span {
+  color: #fff;
+
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+
+  /* mix-blend-mode: screen !important; */
+}
+.home .content{
+  display: flex;
+
+  flex-direction: column;
+  text-align: left !important;
+  justify-content: left;
+  align-items: center;
+
+}
+.home p {
+  color: var(--gray);
+}
+.home p span {
+  font-weight: 900;
+}
+.home .content button{
+  color: white;
+  border-radius: 1rem;
+  background: linear-gradient(#1bc5fb, #1c6af1);
+  box-shadow: #1c6af1 0px 3px 3px;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 400;
+  padding: .4rem 1rem;
+  
+}
+.home .chest_container {
+  width: 32rem;
+  height: 32rem;
+  background: linear-gradient(#1bc5fb, #1c6af1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  /* padding: 4rem 1rem; */
+  box-shadow: #b264e6 0px 2px 2px 0px, #1c6af1 0px 2px 16px 0px;
+  /* animation-name: box; */
+  transition: ease-in;
+  animation-iteration-count: infinite;
+}
+.home .chest_container img {
+  width: 20rem;
+}
+@keyframes box {
+  from {
+    top: -1rem;
+  }
+  to {
+    top: 1rem;
+  }
+}
+
+
+.first_loot{
+  padding: 4rem 2rem ;
+  margin: 4rem auto;
+
+
+}
+h1{
+  color: var(--navbar);
+  font-weight: 900;
+
+}
+.first_loot h1{
+  font-size: 4rem;
+}
+.first_loot .content{
+  /* background: green; */
+  color: var(--gray);
+
+}
+.first_loot .powerdBy{
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  color: #8891B1;
+}
+.first_loot .powerdBy h3{
+  font-weight: 300;
+  margin-left: 1rem;
+  letter-spacing: 1rem;
+  font-size: 2rem;
+}
+.first_loot .content p {
+  width: 71%;
+  font-size: 1.3rem;
+}
+.first_loot .coin_container img{
+  width: 30rem;
+  margin-left: -10rem;
+}
+.progress{
+  /* background: red; */
+  background: none;
+}
+
+/* ----------give_away-------------------------------- */
+
+.give_away{
+  margin: 5rem auto;
+}
+.section3 .card {
+  border: none;
+  background: white;
+}
+.section3 .card i{
+  font-size: 12rem;
+  color: var(--navbar);
 }
