--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ header nav .navbar-nav li img {
   /* background: rgb(33, 164, 187); */
   height: 90vh;
   padding: 2rem;
+  
 }
 .home .para_first {
   color: var(--navbar);
@@ -97,19 +98,67 @@ header nav .navbar-nav li img {
   
 }
 .home .chest_container {
+  position: relative;
   width: 100%;
-  height: 200% !important;
+  height: 210% !important;
   background: linear-gradient(#1bc5fb, #1c6af1);
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
   /* padding: 4rem 1rem; */
-  box-shadow: #b264e6 0px 2px 2px 0px, #1c6af1 0px 2px 16px 0px;
+  box-shadow: #b264e6 0px 2px 1px 0px, #1c6af1 0px 2px 5px 0px;
   /* animation-name: box; */
   transition: ease-in;
   animation-iteration-count: infinite;
 }
+.home .chest_container .square{
+  position: absolute;
+  background: linear-gradient(#f020c3, #5d1b9b);
+ border-radius: .3rem;
+  width: 2rem;
+  height: 2rem;
+  top: 2rem;
+  right: .7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home .chest_container .square::before{
+  position: absolute;
+  content: "";
+  width: 1.5rem;
+  height: 1.5rem;
+  background:rgb(8, 7, 8) ;
+
+
+}
+
+.home .chest_container .circle{
+  position: absolute;
+  background: linear-gradient(#f020c3, #5d1b9b);
+ border-radius: 2rem;
+  width: 2rem;
+  height: 2rem;
+  bottom: 2rem;
+  
+  left: .7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home .chest_container .circle::before{
+  position: absolute;
+  content: "";
+  width: 1.5rem;
+  height: 1.5rem;
+  background:rgb(8, 7, 8) ;
+ border-radius: 2rem;
+
+
+
+}
+
 .home .chest_container img {
   width: 20rem;
 }
